2015.10.4: 2.0
	Reorganize fdzipstream.c with suggestions from @Crog.
	- Support for arbitrary methods through call back functions and convert
	the included STORE and DEFLATE methods to use this interface.
	- Remove duplication, zs_writeentry() is now a simple wrapper around
	other functions.
	- Remove zs_entryflush() external interface, flushing is now a part of
	zs_entryend().

2015.8.2: 1.1
	- Rework deflate() logic for flexibility and simplicity.
	- Add zs_entryflush() as a simple wrapper to flush internal compression
	buffers without new data.  Thanks to @Crog for reporting and suggesting.
	- Update zipfiles.c example code to use new zs_entryflush().
	- Allow retry of write() in zs_writedata() for incomplete writes as
	suggested by @Crog.
	- Add Apache 2 licensing notices.

2013.9.28: 1.0
	- Initial version.  Supports classic ZIP archive creation, files/entries
	with streaming structures (data can be chunked) and ZIP64 Central
	Directory structures for archives totalling more then 4GB in size.